<resources>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Casa</string>
    <string name="tab_profile">Perfil</string>
    <string name="tab_camera">Camara</string>
    <string name="tab_favorite">Favorito</string>
    <string name="app_name">Pucesegram</string>
    <string name="title_activity_referencia">Lugares Turísticos</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Ingresar</string>
    <string name="dont_have_account">¿No Tienes Cuenta?</string>
    <string name="create_here">Crea Una Aquí</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_createaccount">Crear Cuenta</string>
    <string name="toolbar_home">Inicio</string>
    <string name="username_card">Pocho</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10</string>
    <string name="text_button_signOut">Cerrar sesion</string>
    <string name="hello_world">Hola mundo</string>
    <string name="sign_out">Cerrar sesion</string>
    <string name="Reset_Password">Restablecer contraseña</string>
    <string name="Forgot_Password">Olvidé mi contraseña</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">Bienvenidos a</string>
    <string name="lorem">La Playa de Portete está ubicada al sur de la provincia de Esmeraldas, en el cantón Muisne. Es visitada por cientos de turistas por sus  hermosos paisajes y  extensa playa, se puede disfrutar de un entorno de naturaleza pura y mucha calma. El azul del cielo se refleja en las aguas cristalinas del mar. La espuma blanca de las olas irrumpe por instantes en la fina arena, mientras el viento agita las hojas de un extenso bosque de palmera a lo largo de la playa solitaria de la isla de Portete.</string>

    <string-array name="Lugares_turisticos">
        <item>Portete</item>
        <item>Atacames</item>
        <item>Las Palmas</item>
        <item>Mompiche</item>
        <item>Muisne</item>
        <item>Galera</item>
        <item>Estero de plátano</item>
    </string-array>
    <string-array name="likes">
        <item>10 me gusta </item>
        <item>7 me gusta</item>
        <item>15 me gusta</item>
        <item>8 me gusta</item>
        <item>2 me gusta</item>
        <item>4 me gusta</item>
        <item>3 me gusta</item>
    </string-array>
    <string-array name="makeCard">
        <item>4 días</item>
        <item>3 días</item>
        <item>8 días</item>
        <item>15 días</item>
        <item>1 día</item>
        <item>8 días</item>
        <item>3 días</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondtitle_detail">Esmeraldas</string>
    <string name="likecard_card">me gusta</string>
    <string name="buscar">Buscar</string>
    <string name="login_error">"Ha ocurrido un error "</string>


</resources>
