<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/tab_search"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/me"
        android:title="@string/tab_profile"/>
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/tab_home"/>
    <item
        android:id="@+id/camera"
        android:enabled="true"
        android:icon="@drawable/camera"
        android:title="@string/tab_camera"/>
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/tab_favorite"/>
</menu>