<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/tools"
    android:id="@+id/pictureCards"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertival_margin"
    tools:context=".view.HomeActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/portete"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/activity_vertival_margin"
            android:paddingBottom="@dimen/activity_vertival_margin"
            android:background="@color/backgroundtext_card"
            >
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/firstword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    />
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop_card"
                >
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />
                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumbercard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"

                    />


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_signOut"
        android:theme="@style/RaisedButtonDark"
        android:layout_margin="20dp"
        android:layout_weight="0.2"
        />
    </LinearLayout>

</android.support.v7.widget.CardView>